--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -3,3 +3,4 @@ FROM nginx:1.13-alpine
 MAINTAINER Ala Eddine Khefifi <alakhefifi@gmail.com>
 
 COPY conf.d /etc/nginx/conf.d/
+COPY nginx.conf /etc/nginx/
