--- a/docker/php-fpm/php.ini
+++ b/docker/php-fpm/php.ini
@@ -2,7 +2,7 @@ upload_max_filesize = 1024M
 post_max_size = 1024M
 
 apc.enable_cli = 1
-date.timezone = UTC
+date.timezone = 'Europe/Paris'
 session.auto_start = Off
 short_open_tag = Off
 
@@ -15,3 +15,8 @@ memory_limit = -1
 display_errors = On
 max_execution_time = 500
 cgi.fix_pathinfo = 0
+
+magic_quotes_gpc = Off
+register_globals = Off
+error_reporting = E_ALL
+log_errors = On
